cleanup code for figure 3

--- a/notebooks/04_paper.ipynb
+++ b/notebooks/04_paper.ipynb
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "3776554f",
    "metadata": {},
    "outputs": [
@@ -803,18 +803,16 @@
     "def plot_segment_risk(\n",
     "    segment_df,\n",
     "    junction_df,\n",
+    "    center_lat,\n",
+    "    center_lon,\n",
+    "    lat_tol,\n",
+    "    lon_tol,\n",
     "    risk_column: str = \"risk_estimate\",\n",
     "    output_path: str | None = None,\n",
-    "\n",
     "):\n",
     "    plt.rcParams.update(figsizes.icml2024_half())\n",
     "    fig, ax = plt.subplots()\n",
-    "    # use TuePlots colors\n",
-    "    plt.rcParams.update(bundles.icml2024())\n",
-    "    \n",
-    "    if risk_column not in segment_df.columns:\n",
-    "        raise ValueError(f\"Column '{risk_column}' not found.\")\n",
-    "    \n",
+    "     \n",
     "    risk_segments = segment_df[risk_column]\n",
     "    risk_junctions = junction_df[risk_column]\n",
     "\n",
@@ -835,10 +833,6 @@
     "        cmap=tue_map,\n",
     "        linewidth=1,\n",
     "        legend=False,\n",
-    "        legend_kwds={\n",
-    "            \"shrink\": 0.6,\n",
-    "            \"pad\": 0.05,\n",
-    "        },\n",
     "        norm=norm,\n",
     "        zorder=1\n",
     "    )\n",
@@ -855,20 +849,9 @@
     "\n",
     "    # Hide axes\n",
     "    ax.set_axis_off()\n",
-    "    ax.set_xticks([])\n",
-    "    ax.set_yticks([])\n",
-    "    fig = ax.get_figure()\n",
-    "    cbar_ax = fig.axes[-1]     \n",
-    "    cbar_ax.minorticks_off()\n",
     "\n",
     "    # zooming into center to improve readability\n",
-    "    apply_center_zoom(ax=ax, center_lat=5820000, center_lon=391000, lat_tol=1.2*6000, lon_tol=2.0*6000)\n",
-    "\n",
-    "\n",
-    "    for spine in cbar_ax.spines.values():\n",
-    "        spine.set_linewidth(0.4)\n",
-    "\n",
-    "    #plt.title(\"Relative Risk per Segment\", pad=0.1)    \n",
+    "    apply_center_zoom(ax=ax, center_lat=center_lat, center_lon=center_lon, lat_tol=lat_tol, lon_tol=lon_tol)\n",
     "\n",
     "    if output_path:\n",
     "        plt.savefig(output_path, dpi=200)\n",
@@ -878,6 +861,10 @@
     "plot_segment_risk(\n",
     "    segment_df=agg_segments,\n",
     "    junction_df=agg_junctions,\n",
+    "    center_lat = 5820000,\n",
+    "    center_lon = 391000,\n",
+    "    lat_tol = 1.2*6000,\n",
+    "    lon_tol = 2.0*6000,\n",
     "    risk_column=\"rr_eb\",\n",
     "    output_path=\"../report/figs/risk_segments.pdf\",\n",
     ")\n"
