changed Unfallatlas to Accident Atlas, added todo notes, and added a description of the ecdf in notebook 03

--- a/notebooks/03_graph_and_routing.ipynb
+++ b/notebooks/03_graph_and_routing.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "33cbdbce",
    "metadata": {},
    "outputs": [],
@@ -37,6 +37,10 @@
     "from typing import Dict, Iterable, List, Optional, Sequence, Tuple, Union\n",
     "\n",
     "import folium\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "from tueplots import bundles, figsizes\n",
+    "from tueplots.constants.color import palettes\n",
     "\n",
     "# set project root\n",
     "from pathlib import Path\n",
@@ -1126,8 +1130,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7d923c9c",
+   "metadata": {},
+   "source": [
+    "### Empirical distribution of route-level risk reduction\n",
+    "\n",
+    "The figure shows empirical cumulative distribution functions (ECDFs) of the relative risk reduction $\\Delta_R$ across origin–destination pairs for different detour budgets $\\varepsilon$, evaluated at a fixed junction-risk weight $\\eta=0.5$. For each value of (\\varepsilon), the ECDF reports the fraction of routes whose safety-aware alternative achieves a risk reduction less than or equal to a given $\\Delta_R$.\n",
+    "\n",
+    "As the detour budget increases, the ECDF curves shift to the right, indicating that a larger proportion of routes attain higher levels of relative risk reduction. At small detour budgets, a substantial fraction of routes exhibit little or no reduction, while larger detour budgets correspond to higher ECDF values at larger $\\Delta_R4. The shaded bands around each ECDF represent uniform Dvoretzky–Kiefer–Wolfowitz confidence intervals, reflecting sampling uncertainty in the empirical distributions.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "3a1ecb50",
    "metadata": {},
    "outputs": [
@@ -1143,11 +1159,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from tueplots import bundles, figsizes\n",
-    "from tueplots.constants.color import palettes\n",
-    "\n",
     "def ecdf(values: np.ndarray):\n",
     "    x = np.sort(values)\n",
     "    n = x.size\n",
