fixed to issues in the bibliography

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -57,12 +57,11 @@
 }
 
 @misc{Unfallatlas2025,
- author = {{German Federal Statistical Office}},
- howpublished = {\url{https://unfallatlas.statistikportal.de/}},
- note = {Interaktive Kartenanwendung zu Straßenverkehrsunfällen mit Personenschaden in Deutschland},
- title = {{Unfallatlas}},
- urldate = {2025-12-05},
- year = {2025}
+  title        = {{Accident Atlas}},
+  author       = {{German Federal Statistical Office}},
+  url          = {https://unfallatlas.statistikportal.de},
+  year         = {2025},
+  urldate      = {2025-12-05}
 }
 
 @dataset{kaiser_2025_15332147,
@@ -116,6 +115,7 @@ Volume},
  publisher = {Springer},
  series = {Lecture Notes in Economics and Mathematical Systems},
  title = {Multicriteria Optimization},
+ url = {https://doi.org/10.1007/3-540-27659-9},
  volume = {491},
  year = {2005}
 }
