Added Details about selected junction

--- a/notebooks/04_paper.ipynb
+++ b/notebooks/04_paper.ipynb
@@ -1305,12 +1305,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "623ab6d4",
+   "metadata": {},
+   "source": [
+    "### Details on Selected Junction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0b943f3d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "center_lat = 52.5742893033972 \n",
+    "center_lon = 13.38955712127424\n",
+    "acc_lat_tol = 0.0002246\n",
+    "acc_lon_tol = 0.0003683\n",
+    "min_lat, max_lat = center_lat - acc_lat_tol, center_lat + acc_lat_tol\n",
+    "min_lon, max_lon = center_lon - acc_lon_tol, center_lon + acc_lon_tol\n",
+    "\n",
+    "\n",
+    "selcted_accs = accidents_df[accidents_df[\"YGCSWGS84\"].between(min_lat, max_lat) & accidents_df[\"XGCSWGS84\"].between(min_lon, max_lon)]\n",
+    "selcted_accs.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa5b808b",
+   "metadata": {},
+   "source": [
+    "Findings:\n",
+    "- all with second vehicle involved!\n",
+    "\t- 20 with cars\n",
+    "\t- 1 with goods truck\n",
+    "\t- 1 with other vehicle\n",
+    "- 2020 only 1 accident, all other years 5 or 6 accidents reported (no information about construction work found for 2020\n",
+    "--> this supports our assumption that the cars crossing a bicycle lane could be the problem here\n",
+    "\n",
+    "work_hours (7h-18h) 55%\n",
+    "evening (18h-22h) 32%\n",
+    "night (22h-7h) 14%"
+   ]
   }
  ],
  "metadata": {
